[package]
name = "aether_store"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
blake3 = "1.8.3"
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sled = "0.34.7"
thiserror = "2.0.18"
tokenizers = "0.22.2"
z3 = "0.19.7"
